--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,13 +16,11 @@
     <header class="site-header container">
       <a class="logo" href="{{ '/' | relative_url }}">
         <span class="logo-mark">⛨</span>
-        <span class="logo-text">SQ / Cyber</span>
+        <span class="logo-text">SQLTemp Cybersécurité</span>
       </a>
       <nav class="nav">
         <a href="{{ '/pages/about/' | relative_url }}">À propos</a>
-        <a href="{{ '/pages/articles/' | relative_url }}">Articles</a>
-        <a href="{{ '/pages/red-team/' | relative_url }}">Red Team</a>
-        <a href="{{ '/pages/blue-team/' | relative_url }}">Blue Team</a>
+        <a href="{{ '/pages/articles/' | relative_url }}">Cheat sheets</a>
         <a href="{{ '/pages/projects/' | relative_url }}">Projets</a>
         <a href="{{ '/pages/resources/' | relative_url }}">Ressources</a>
         <a href="{{ '/pages/contact/' | relative_url }}">Contact</a>
