--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,7 @@ body.theme-light .nav a:hover{background:#eef2f6}
   text-align: center;
   margin-bottom: 20px;
   font-size: 1.8em;
-  color: #00ff99; /* vert fluo type terminal */
+  color: #1e90ff; /* 00ff99 vert fluo type terminal */
   text-shadow: 0 0 6px rgba(0, 255, 153, 0.4);
 }
 
