--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,3 +63,10 @@ a:hover {
 .terminal-section p {
   text-align: justify;
 }
+.img-reduite {
+  width: auto;
+  max-width: 100%;
+  height: 250px;
+  object-fit: contain;
+}
+
